2004-04-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmail.el (nnmail-cache-insert): Revert last change.

2004-04-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmail.el (nnmail-cache-insert): Always check whether
	nnmail-cache-ignore-groups matches a group name.

2004-04-13  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-fetch-field-fast, spam-generate-fake-headers)
	(spam-find-spam, spam-log-processing-to-registry)
	(spam-log-registered-p, spam-log-unregistration-needed-p)
	(spam-log-undo-registration): use gnus-message instead of
	gnus-error, none of these errors are fatal

	* gnus-registry.el (gnus-registry-clean-empty-function)
	(gnus-registry-clean-empty): remove only empty entries without
	extra data

2004-04-12  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam-stat.el (spam-stat-buffer-change-to-spam)
	(spam-stat-buffer-change-to-non-spam): change (error) to
	(gnus-message 8) invocation

2004-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-via-netcat-command): New variable.
	(nntp-via-netcat-switches): New variable.
	(nntp-open-via-rlogin-and-netcat): New function.
	(nntp-open-connection-function): Doc fix.
	(nntp-telnet-command): Doc fix.
	(nntp-end-of-line): Doc fix.
	(nntp-via-rlogin-command): Doc fix.
	(nntp-via-user-name): Doc fix.
	(nntp-via-address): Doc fix.

2004-04-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml2015.el (mml2015-use): Avoid the "Recursive load suspected"
	error in Emacs 21.1.

2004-04-08  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-start.el (gnus-get-unread-articles): Fix last commit.

2004-04-07  Kevin Greiner  <kgreiner@xpediantsolutions.com>
	* gnus-agent.el (gnus-agent-total-fetched-hashtb): New variable.
	(gnus-agent-with-refreshed-group): New macro.
	(gnus-agent-rename-group): New function.
	(gnus-agent-delete-group): New function.
	(gnus-agent-save-group-info): Use gnus-command-method when
	`method' parameter is nil.  Don't write nil entries into the
	active file.
	(gnus-agent-get-group-info): New function.